// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests ERC20 tokens #initialize initialize pool with no hooks and no protocol fee 1`] = `
Object {
  "calldataByteLength": 196,
<<<<<<< HEAD
  "gasUsed": 54643,
=======
  "gasUsed": 54166,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 158450,
=======
  "gasUsed": 157743,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 218192,
=======
  "gasUsed": 217485,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 158450,
=======
  "gasUsed": 157743,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 210028,
=======
  "gasUsed": 209468,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 319644,
=======
  "gasUsed": 319084,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 210028,
=======
  "gasUsed": 209468,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 159166,
=======
  "gasUsed": 158460,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 286816,
=======
  "gasUsed": 286110,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 159166,
=======
  "gasUsed": 158460,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
  "gasUsed": 192808,
=======
  "gasUsed": 192086,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
  "gasUsed": 186886,
=======
  "gasUsed": 186197,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
  "gasUsed": 211784,
=======
  "gasUsed": 211029,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
  "gasUsed": 253924,
=======
  "gasUsed": 253070,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
  "gasUsed": 204849,
=======
  "gasUsed": 204061,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
  "gasUsed": 192808,
=======
  "gasUsed": 192086,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
  "gasUsed": 186975,
=======
  "gasUsed": 186286,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
  "gasUsed": 205979,
=======
  "gasUsed": 205257,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests ERC20 tokens #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
  "gasUsed": 248093,
=======
  "gasUsed": 247272,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 150676,
=======
<<<<<<< HEAD
  "gasUsed": 150738,
=======
  "gasUsed": 151443,
>>>>>>> 109d0e8 (Fixing stack too deep)
>>>>>>> c12aff5 (Fixing stack too deep)
=======
  "gasUsed": 150738,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 210419,
=======
<<<<<<< HEAD
  "gasUsed": 210480,
=======
  "gasUsed": 211185,
>>>>>>> 109d0e8 (Fixing stack too deep)
>>>>>>> c12aff5 (Fixing stack too deep)
=======
  "gasUsed": 210480,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 150676,
=======
<<<<<<< HEAD
  "gasUsed": 150738,
=======
  "gasUsed": 151443,
>>>>>>> 109d0e8 (Fixing stack too deep)
>>>>>>> c12aff5 (Fixing stack too deep)
=======
  "gasUsed": 150738,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 202400,
=======
<<<<<<< HEAD
  "gasUsed": 202461,
=======
  "gasUsed": 203020,
>>>>>>> 109d0e8 (Fixing stack too deep)
>>>>>>> c12aff5 (Fixing stack too deep)
=======
  "gasUsed": 202461,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 312016,
=======
<<<<<<< HEAD
  "gasUsed": 312077,
=======
  "gasUsed": 312636,
>>>>>>> 109d0e8 (Fixing stack too deep)
>>>>>>> c12aff5 (Fixing stack too deep)
=======
  "gasUsed": 312077,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 202400,
=======
<<<<<<< HEAD
  "gasUsed": 202461,
=======
  "gasUsed": 203020,
>>>>>>> 109d0e8 (Fixing stack too deep)
>>>>>>> c12aff5 (Fixing stack too deep)
=======
  "gasUsed": 202461,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 163812,
=======
<<<<<<< HEAD
  "gasUsed": 163874,
=======
  "gasUsed": 164580,
>>>>>>> 109d0e8 (Fixing stack too deep)
>>>>>>> c12aff5 (Fixing stack too deep)
=======
  "gasUsed": 163874,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 291462,
=======
<<<<<<< HEAD
  "gasUsed": 291524,
=======
  "gasUsed": 292229,
>>>>>>> 109d0e8 (Fixing stack too deep)
>>>>>>> c12aff5 (Fixing stack too deep)
=======
  "gasUsed": 291524,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 163812,
=======
<<<<<<< HEAD
  "gasUsed": 163874,
=======
  "gasUsed": 164580,
>>>>>>> 109d0e8 (Fixing stack too deep)
>>>>>>> c12aff5 (Fixing stack too deep)
=======
  "gasUsed": 163874,
>>>>>>> 70b4c68 (fix: hardhat test interfaces)
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 179441,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 173552,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 198384,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 240425,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 191416,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 179441,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 173641,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 192612,
}
`;

exports[`PoolManager gas tests Native Tokens #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 234628,
}
`;
